--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,6 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag wylliamsantos/client-service:$(date +%s)
+      run: docker build -t wylliamsantos/client-service --file Dockerfile --tag wylliamsantos/client-service:$(date +%s)
     - name: Docker Push
       run: docker push ${{secrets.DOCKER_USER}}/wylliamsantos
