--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
         
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
+        with:
+          java-version: '16'
+          distribution: 'adopt'
+        
       - name: Build packages and install them
         run: ./gradlew clean bootJar
 
