--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,5 +40,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: latest
+          tags: |
+            # branch event
+            type=ref,event=branch
+            # tag event
+            type=ref,event=tag
+            # pull request event
+            type=ref,event=pr
           labels: ${{ steps.meta.outputs.labels }}
