new endpoint find client + redis

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,7 +1,9 @@
 spring:
+  jpa:
+    show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://origination-mysql:3306/wvs?useTimezone=true&serverTimezone=UTC&nullNamePatternMatchesALl=true
+    url: jdbc:mysql://${HOST:origination-mysql}:3306/wvs?useTimezone=true&serverTimezone=UTC&nullNamePatternMatchesALl=true
     username: wvs
     password: wvs
     hikari:
@@ -11,7 +13,7 @@ spring:
       maximumPoolSize: 5
       minimumIdle: 1
   flyway:
-    url: jdbc:mysql://origination-mysql:3306/
+    url: jdbc:mysql://${HOST:origination-mysql}:3306/
     schemas: wvs
     user: root
     password: admin123
