--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,13 @@ dependencies {
 	implementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	//implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation "org.springframework.boot:spring-boot-starter-cache"
 	implementation "org.flywaydb:flyway-core:${flywayVersion}"
 	implementation "org.hibernate:hibernate-validator:${hibernateValidatorVersion}"
 	implementation "org.modelmapper:modelmapper:${modelMapperVersion}"
+	implementation "org.apache.commons:commons-lang3"
+
 	compileOnly "org.projectlombok:lombok"
 	runtimeOnly "mysql:mysql-connector-java"
 	annotationProcessor "org.projectlombok:lombok"
